--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -12,6 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "sass": "^1.97.1",
+    "sass-loader": "^16.0.6",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
